--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
     const customerName = "The Harmony"; const customerCode = "W3481"; 
-    const frequentCodes = ["D39", "D17G", "C01CK", "D09F", "C19B", "A03", "D82", "C01CA", "C01FB", "C53B", "D84", "D39DA", "C43", "C70", "E11", "D21", "C01CH", "D10EAA", "E08", "C01F", "C26A", "D79", "C24F", "D05C", "C52E", "C31D", "C51C", "C39", "C39A", "C29C"];
+    const frequentCodes = ["C01CK", "D17G", "D39", "D82", "D09F", "C01CA", "C01CH", "C01FB", "C19B", "D39DA", "D84", "E11", "A03", "C43", "C51C", "C53B", "C70", "D05C", "E03A", "C01F", "C23", "C52E", "D21BA", "D65AA", "C14G", "C24A", "C29C", "C31D", "C39", "C39A", "D09HA", "D10EAA", "D21", "E08", "C04C", "C14E", "C26A", "C27B", "C28A", "C38", "D39H", "D79", "D88C"];
     const eelProducts = ["D22J", "D22L", "D22", "D22C", "D22A", "D22D", "D22I", "D22G"];
     const weightedProducts = ["D61B", "D61C", "D18A", "D17E", "D17C", "B01", "D18"];
     const fullCatalog = [
