--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     const salesPhone = "85263771688"; 
     const storageKey = "the_harmony_v9";
     const frequentCodes = ["C01CK", "D17G", "D39", "D82", "D09F", "C01CA", "C01CH", "C01FB", "C19B", "D39DA", "D84", "E11", "A03", "C43", "C51C", "C53B", "C70", "D05C", "E03A", "C01F", "C23", "C52E", "D21BA", "D65AA", "C14G", "C24A", "C29C", "C31D", "C39", "C39A", "D09HA", "D10EAA", "D21", "E08", "C04C", "C14E", "C26A", "C27B", "C28A", "C38", "D39H", "D79", "D88C"];
-    const outOfStockCodes = ["C58AC","D58C","D10F","D10D","D09M","D09G"];
+    const outOfStockCodes = ["D58C","D10F","D10D","D09M","D09G"];
     let learnedFrequent = [];
     const eelProducts = ["D22J", "D22L", "D22", "D22C", "D22A", "D22D", "D22I", "D22G"];
     const weightedProducts = ["D61B", "D61C", "D18A", "D17E", "D17C", "B01", "D18"];
